tests/fixtures/errors/view_move_arg.z
# E0200: passing a map view's payload to a taking parameter is a move —
# it would drain the map's stored value.
consume: function {s: String.take} is {
    print s
}
main: function is {
    m: (Map String value: String)
    m.set key: "a".string value: "x".string
    got: m.get key: "a".string
    match (
        got
    ) case some then {
        consume s: got
    } case none then {}
}
